// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmployerBenefitList when all data are present renders all data fields 1`] = `
Array [
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="0"
    label="Benefit 1"
    type="Accrued paid leave"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="1"
    label="Benefit 2"
    type="Short-term disability insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="2"
    label="Benefit 3"
    type="Permanent disability insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="3"
    label="Benefit 4"
    type="Family or medical leave insurance"
  />,
]
`;

exports[`EmployerBenefitList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  amount={null}
  dates=""
  key="0"
  label="Benefit 1"
  type={null}
/>
`;

exports[`OtherIncomeList when all data are present renders all data fields 1`] = `
Array [
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="0"
    label="Income 1"
    type="Workers Compensation"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="1"
    label="Income 2"
    type="Unemployment Insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="2"
    label="Income 3"
    type="Social Security Disability Insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="3"
    label="Income 4"
    type="Disability benefits under a governmental retirement plan"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="4"
    label="Income 5"
    type="Jones Act benefits"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="5"
    label="Income 6"
    type="Railroad Retirement benefits"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="6"
    label="Income 7"
    type="Earnings from another employer"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="7"
    label="Income 8"
    type="Earnings from self-employment"
  />,
]
`;

exports[`OtherIncomeList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  amount={null}
  dates=""
  key="0"
  label="Income 1"
  type={null}
/>
`;

exports[`OtherLeaveEntry when all data are present renders all data fields 1`] = `
<ReviewRow
  label="Benefit 1"
>
  Medical or family leave
  <br />
  07-22-2020 - 09-22-2020
  <br />
  $250 per month
</ReviewRow>
`;

exports[`OtherLeaveEntry when data are missing doesn't render missing data 1`] = `
<ReviewRow
  label="Benefit 1"
/>
`;

exports[`PreviousLeaveList when all data are present renders all data fields 1`] = `
<OtherLeaveEntry
  dates="8/12/2021 – 12/30/2021"
  key="0"
  label="Previous leave 1"
/>
`;

exports[`PreviousLeaveList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  dates=""
  key="0"
  label="Previous leave 1"
/>
`;

exports[`Review when all data is present renders Review page with the field values 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title>
    Check your answers before sending your application
  </Title>
  <ReviewHeading
    editHref="/claims/name?claim_id=mock_application_id"
    editText="Edit"
  >
    Verify your identity
  </ReviewHeading>
  <ReviewRow
    label="Full name"
  >
    Bud Monstera Baxter
  </ReviewRow>
  <ReviewRow
    label="Residential address"
  >
    19 Staniford St, Suite 505, Boston, MA
     
    02114
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
  >
    **/**/****
  </ReviewRow>
  <ReviewRow
    label="Social security number"
  >
    ***-**-****
  </ReviewRow>
  <ReviewRow
    label="Massachusetts driver's license or ID"
  >
    *********
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/leave-reason?claim_id=mock_application_id"
    editText="Edit"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Are you pregnant or have you recently given birth?"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
  >
    9/21/2021 – 12/30/2021
  </ReviewRow>
  <ReviewRow
    label="Leave duration type"
  >
    Continuous leave, Reduced leave schedule, Intermittent leave
  </ReviewRow>
  <ReviewRow
    label="Average hours worked per week"
  >
    20
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/employment-status?claim_id=mock_application_id"
    editText="Edit"
  >
    Employment information
  </ReviewHeading>
  <ReviewRow
    label="Employment status"
  >
    Currently employed
  </ReviewRow>
  <ReviewRow
    label="Employer's FEIN"
  >
    12-1234567
  </ReviewRow>
  <ReviewRow
    label="Notified employer"
  >
    Notified employer on 6/25/2020
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/employer-benefits?claim_id=mock_application_id"
    editText="Edit"
  >
    Other income and benefits
  </ReviewHeading>
  <ReviewRow
    label="Employer-sponsored benefits?"
  >
    Yes
  </ReviewRow>
  <EmployerBenefitList
    entries={
      Array [
        EmployerBenefit {
          "benefit_amount_dollars": "250",
          "benefit_amount_frequency": null,
          "benefit_end_date": "2021-12-30",
          "benefit_start_date": "2021-08-12",
          "benefit_type": "Paid Leave",
        },
      ]
    }
  />
  <ReviewRow
    label="Other sources of income?"
  >
    Yes
  </ReviewRow>
  <OtherIncomeList
    entries={
      Array [
        OtherIncome {
          "income_amount_dollars": "250",
          "income_amount_frequency": null,
          "income_end_date": "2021-12-30",
          "income_start_date": "2021-08-12",
          "income_type": "Workers Comp",
        },
      ]
    }
  />
  <ReviewRow
    editText="Edit"
    label="Previous paid or unpaid leave?"
  >
    Yes
  </ReviewRow>
  <PreviousLeaveList
    entries={
      Array [
        PreviousLeave {
          "leave_end_date": "2021-12-30",
          "leave_start_date": "2021-08-12",
        },
      ]
    }
  />
  <ReviewHeading
    editHref="/claims/payment-method?claim_id=mock_application_id"
    editText="Edit"
  >
    Payment information
  </ReviewHeading>
  <ReviewRow
    label="Payment method"
  >
    Direct deposit
  </ReviewRow>
  <ButtonLink
    className="margin-top-3"
    href="/claims/confirm?claim_id=mock_application_id"
  >
    Confirm information is correct
  </ButtonLink>
</div>
`;

exports[`Review when conditional data is empty does not render strings like 'null' or 'undefined' 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title>
    Check your answers before sending your application
  </Title>
  <ReviewHeading
    editHref="/claims/name?claim_id=mock_application_id"
    editText="Edit"
  >
    Verify your identity
  </ReviewHeading>
  <ReviewRow
    label="Full name"
  >
      
  </ReviewRow>
  <ReviewRow
    label="Residential address"
  >
     
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
  >
    **/**/****
  </ReviewRow>
  <ReviewRow
    label="Social security number"
  >
    ***-**-****
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/leave-reason?claim_id=mock_application_id"
    editText="Edit"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Are you pregnant or have you recently given birth?"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
  />
  <ReviewRow
    label="Leave duration type"
  />
  <ReviewHeading
    editHref="/claims/employment-status?claim_id=mock_application_id"
    editText="Edit"
  >
    Employment information
  </ReviewHeading>
  <ReviewHeading
    editHref="/claims/employer-benefits?claim_id=mock_application_id"
    editText="Edit"
  >
    Other income and benefits
  </ReviewHeading>
  <ReviewRow
    label="Employer-sponsored benefits?"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Other sources of income?"
  >
    No
  </ReviewRow>
  <ReviewRow
    editText="Edit"
    label="Previous paid or unpaid leave?"
  >
    No
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/payment-method?claim_id=mock_application_id"
    editText="Edit"
  >
    Payment information
  </ReviewHeading>
  <ButtonLink
    className="margin-top-3"
    href="/claims/confirm?claim_id=mock_application_id"
  >
    Confirm information is correct
  </ButtonLink>
</div>
`;
